# for-how-much

./: .env.example  Dockerfile  Makefile  README.md  compose.override.yaml  compose.yaml  main.py  pyproject.toml  test_request.py
data/: data_source.csv
src/for_how_much/: database.py  models.py  schemas.py  services.py
src/for_how_much/migrate/: init_db.py  load_questions.py  remove_db.py
tests/src/for_how_much/: test_hello_world.py
